# Scout_Interface

./: '  .gitignore  .gitmodules  AMES_2024_Dec_10_Day5_Column2a_1b_4a_demo_3b_1.9a  README.md  lassie-spirit-current-visualization.json
foxglove_template/: lassie-spirit-RSS-demo.json  lassie-spirit-ames_2024_12.json  lassie-spirit-current-visualization.json  lassie-spirit-spirit-scouting-safe-planner-simulation.json  lassie-spirit-spirit-scouting-safe-planner.json  lassie-spirit-spirit-scouting-withoutplanner.json  lassie-spirit-spirit_scouting_withoutplanner_withvision.json  trusses_rover_operation_whitesand.json
src/foxglove_visualization/: package.xml  setup.cfg  setup.py
src/foxglove_visualization/foxglove_visualization/: DiffDriveSim.py  FakeDataPublisher.py  FakePathPublisher.py  FullyActuated2DDriveSim.py  LegMeasurementRealtime.py  gpsVisualizer.py  mocapCollection.py  visualizer.py
src/gopro_webcam_test/: CMakeLists.txt  package.xml
src/gopro_webcam_test/include/image_pipeline/: camera_node.hpp  common.hpp  image_view_node.hpp  webcam.hpp
src/gopro_webcam_test/src/image_pipeline/: image_pipeline_all_in_one.cpp  image_view_node.cpp  webcam.cpp
src/scientific_payloads/: package.xml  setup.cfg  setup.py
src/scientific_payloads/scientific_payloads/: camera_main.py  camera_subscriber.py
src/spirit_high_launch/: CMakeLists.txt  package.xml
src/spirit_high_launch/config/: asme.yaml  lpsc.yaml  rss.yaml  safe_scouting.yaml  whitesandsafescouting.yaml  whitesandsafescoutingLABmocaptesting.yaml  whitesandscouting.yaml  ws_rover.yaml  ws_scouting.yaml
src/spirit_high_launch/config/archived/: asme.yaml  faketesting.yaml  whitesandrover.yaml  whitesandscouting.yaml  ws_rover.yaml
src/spirit_high_launch/launch/: launch_asme_demo.launch.py  launch_fake_testing.launch.py  launch_lpsc_demo.launch.py  launch_rss_demo.launch.py  launch_whitesand_scouting.launch.py  launch_ws_rover.launch.py  launch_ws_scouting.launch.py  safe_bayesian_optimization.launch.py
src/spirit_high_launch/launch/archived/: launch_asme_demo.launch.py  launch_fake_testing.launch.py  launch_whitesand_rover_planning.launch.py  launch_ws_rover.launch.py
src/spirit_high_launch/launch/safe_scouting/: launch_foxglove_bridge.launch.py  launch_safe_scouting_chronosim.launch.py  launch_safe_scouting_full.launch.py  launch_safe_scouting_interface.launch.py  launch_safe_scouting_mapping.launch.py  launch_safe_scouting_no_foxglove.launch.py  launch_safe_scouting_planner.launch.py  launch_safe_scouting_robotsciencenode.launch.py  launch_safe_scouting_simulator.launch.py  launch_safe_scouting_strengthsim.launch.py  safe_bayesian_optimization_full.launch.py  safe_bayesian_optimization_mapping_launch.py  safe_bayesian_optimization_safe_planner.launch.py  safe_bayesian_optimization_simulation.launch.py  safe_bayesian_optimization_visualization.launch.py
src/spirit_high_launch/launch/scouting_withoutplanner/: launch_ws_scouting_foxglove.launch.py  launch_ws_scouting_full.launch.py  launch_ws_scouting_maping.launch.py  launch_ws_scouting_robotsciencenode.launch.py  launch_ws_scoutingdebug.launch.py
src/spirit_high_msgs/: CMakeLists.txt
src/spirit_high_msgs/msg/: RealtimeMeasurement.msg
src/spirit_msgs/: CMakeLists.txt  package.xml
src/spirit_msgs/msg/: SpiritConfig.msg  SpiritCrawlControl.msg  SpiritGPS.msg  SpiritLoadCell.msg  SpiritRobotMode.msg  SpiritRobotPilot.msg  SpiritState.msg
src/top_view_visualization/: package.xml  readme.md  setup.cfg  setup.py
src/top_view_visualization/top_view_visualization/: camera.py
src/top_view_visualization/top_view_visualization/GoProInterface/: webcam.py
src/top_view_visualization/top_view_visualization/camera_calibration/opencv_calibration/: calibrate_gopro.py
src/top_view_visualization/top_view_visualization/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/top_view_visualization/top_view_visualization/log/: latest_build
