<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scientific_payloads</name>
  <version>0.0.0</version>
  <description>Scientific payloads package for camera subscribers with Foxglove visualization</description>
  
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>Apache License 2.0</license>
  
  <!-- Build dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>
  
  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  
  <!-- Python dependencies that need to be installed via pip -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  
  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>